<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.samsandberg.mtafarebuster.MainActivity$PlaceholderFragment" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:paddingBottom="@dimen/activity_vertical_margin" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_amount_on_card" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

	    <EditText
		    android:id="@+id/amount_on_card"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:hint="@string/hint_amount_on_card"
		    android:text="@string/amount_on_card_default_value"
		    android:inputType="numberDecimal" />
	    
	    <Button
		    android:id="@+id/button_go"
		    android:layout_height="wrap_content"
		    android:layout_width="wrap_content"
		    android:text="@string/button_go_text" />

    </LinearLayout>
    
    <ListView
        android:id="@+id/results_list"
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent" >
    </ListView>

</LinearLayout>
